Updated/Added simply-static-1-1723609596

--- a/wp-content/themes/beautiful-photo/style.css
+++ b/wp-content/themes/beautiful-photo/style.css
@@ -268,7 +268,7 @@ p.clear{
     }
 }
 #splash{
-    background:url("http://nas.local/wordpress/wp-content/themes/beautiful-photo/images/splash.jpg");
+    background:url("/wp-content/themes/beautiful-photo/images/splash.jpg");
     background-size:cover;
     background-repeat:no-repeat;
     background-position:center
